# polder

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  conftest.py  datapackage.json  metadata.json  polder-plan.md  pyproject.toml
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
_logs/: bulk-ori-20260509-140900.progress  bulk-ori-20260509-140900.slugs  bulk-ori-20260509-140953.progress  bulk-ori-20260509-140953.slugs
docs/: apply-staging.md  avg-grenzen.md  bronnen.md  cli.md  data-overheid-nl-aanmelding.md  datamodel.md  deploy-datasette.md  dpia.md  ingest.md  library-en-cli.md  lokaal-draaien.md  roo_field_map.md  secrets.md  takedown-procedure.md  verwerkingsregister.md
schemas/: event.schema.json  mandaat.schema.json  organisatie.schema.json  persoon.schema.json  post.schema.json
scripts/: _backfill_abd_nieuws_list.py  _backfill_abd_nieuws_parse_one.sh  _backfill_abd_nieuws_validate.py  _backfill_staatscourant_download.py  _backfill_staatscourant_list.py  _backfill_staatscourant_parse_one.sh  _backfill_staatscourant_validate.py  _extract_abd_kewal.py  _reparse_abd_nieuws_filter.py  _reparse_abd_nieuws_one.py  _reparse_abd_nieuws_one_wrap.sh  _reparse_abd_nieuws_summary.py  _verify_kewal_snippet.py  apply_staging_local.sh  backfill_abd_nieuws.sh  backfill_staatscourant.sh  bulk_ori_fetch.sh  consolidate_near_dup_mandates.py  daily_update_local.sh  dedup_persons_by_ori_id.py  dedup_persons_by_shared_mandate.py  diagnose_help_render.py  fix_roo_source_urls.py  fix_title_as_family_name.py  fix_tussenvoegsel_as_initial.py  ingest_local.sh  lint_text.sh  parse_abd_nieuws_local.sh  parse_organogram_all.sh  parse_organogram_local.sh  parse_staatscourant_local.sh  reclassify_ori_griffie_medewerkers.py  repair_ori_open_mandates.py  reparse_abd_nieuws.sh  resolve_staging_all.sh  resolve_staging_local.sh  review_pr_diff_local.sh  run_skill.sh  strip_phantom_stadsdeel_mandates.py  upgrade_initials_from_given.py
site/: README.md  index.html
tests/: conftest.py  test_abd_nieuws.py  test_abd_organogrammen.py  test_apply_overlijden.py  test_apply_prewrite_validation.py  test_apply_staging.py  (+47 more)
(+22775 files in other folders)
